<resources>
    <string name="app_name">Easy Notes</string>
    <string name="enter_pin">Введите ПИН-код:</string>
    <string name="enter_new_pin">Введите новый ПИН-код:</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_backspace">←</string>
    <string name="invalid_pin_code">Не верный ПИН-код! Попробуйте ещё раз!</string>
    <string name="settings">Настройки</string>
    <string name="title">Заголовок</string>
    <string name="note_body">Текст заметки</string>
    <string name="deadline">Напоминание</string>
    <string name="new_note">Новая заметка</string>
    <string name="save_note">Сохранить заметку</string>
    <string name="save">Сохранить</string>
    <string name="my_notes">Мои заметки</string>
    <string name="note_saved_successfully">Заметка успешно сохранена!</string>
    <string name="delete">Удалить</string>
    <string name="note_deleted_successfully">Заметка успешно удалена!</string>
    <string name="cancel">Отмена</string>
    <string name="confirmation_deletion">Вы уверены, что хотите удалить заметку?</string>
    <string name="attention">Внимание!</string>
    <string name="pin_code_must_contain_4_digits">ПИН-код должен содержать 4 цифры!</string>
    <string name="new_pin_successfully_saved">Новый ПИН-код успешно сохранён!</string>
    <string name="visibility">Видимость</string>
    <string name="welcome_message">"Добро пожаловать в Easy Notes! Вы можете установить ПИН-код для
        безопасности Ваших заметок!"</string>
    <string name="pin_code_successfully_deleted">ПИН-код успешно удалён!</string>

</resources>
