<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".notes.NoteActivity">

    <EditText
        android:id="@+id/edtTitle"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edtBody"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="300dp"

        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/note_body"
        android:inputType="textMultiLine|textCapWords" />

    <CheckBox
        android:id="@+id/chbHasDeadline"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deadline" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/txtDate"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/btnSetDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setDate"
            app:srcCompat="@drawable/ic_event_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:background="@drawable/line" />

    <LinearLayout

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTime"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/btnSetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setTime"
            app:srcCompat="@drawable/ic_access_time_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:background="@drawable/line" />


</LinearLayout>